@@ -1,3 +1,4 @@
+* Fixed translation in Dutch file (thanks Frank Groeneveld)
 * Added Simplified Chineese translation (thanks Capitan Zhan)
 * Swedish translation typos fixed (thanks Peter Hellberg)
 * --- release 0.9 (2008-01-13) ---
